<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trolly</string>
    <string name="shopping_button">Shopping</string>
    <string name="listing_button">Listing</string>
    <string name="empty_list">Empty list</string>
    
    <string name="add">Add</string>
    <string name="add_hint">Add an item</string>
    <string name="checkout">Checkout</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    
    <string name="delete_item">Delete</string>
    <string name="edit_item">Edit</string>
    <string name="move_on_list">On list</string>
    <string name="move_off_list">Off list</string>
    <string name="move_in_trolley">In trolley</string>
    
    <string name="key_sort_list">list mode sort order</string>
    <string name="key_sort_shop">shop mode sort order</string>
    
    <!-- Added By: Achini De Zoysa 
    Changes: All the new Item categories: Images(s), Priority, Price, Units, Quantity -->   
    <string name="image">Image</string>
    <string name="priority">Priority</string>
    <string name="price">Price (per quantity)</string>
    <string name="units">Units</string>
    <string name="quantity">Quantity</string>
    
    <string name="menu_item_stores">Stores...</string>
    
    <!-- Added By: Hantao Zhao
    Changes: ListItem, Shooping -->    
    <string name="lists">Lists</string>
    <string name="shopping">Shopping</string>
    
    
    <string name="preferences">Preferences</string>
    <string name="clear_list">Clear List</string>
    <string name="clear_prompt">Remove all items from the list?</string>
    <string name="reset_list">Reset List</string>
    <string name="reset_prompt">Permanently delete all items from the list?</string>
    
    <!-- Added By: Menaka Kiriwattuduwa
    Changes: Camera popup menu -->    
    <string name="take_new_pic">Take new picture</string>
    <string name="use_existing_pic">Use existing picture</string>
    <string name="delete_pic">Remove picture</string>
    
</resources>
